# oven-safety-controller

./: CMakeLists.txt  README.md
includes/: controller.h  example.h  sensor.h
sources/: controller.cpp  example.cpp
tests/: mock.h  test_osc.cpp  test_proj.cpp
